integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests_v2_leaf_schema__change_collection_using_set_collection_v2.snap
---
source: integration_tests/tests/integration_tests/cnft_tests_v2_leaf_schema.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "MplBubblegumV2",
  "id": "7xNZ8rh4zH9EoACqEWymt5FSwgjbkDM1uFQ6MSB6kwc8",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "9UF7iwhFbsk6DYohxh6dmRusN8cFm1M9w9mhftAe9jyn",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "A45S6ojRpYLGj6xyj7mPqJGtJFp4Ax5hRJvAxUDRn2Es",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "DwBN2dVW3DxmEEVyKCiZqbwYHRHjqQikMsf5CMyscdkA",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 0,
    "asset_hash": "FdxFgEScCEmdVWMH7pjGDr2jLk5WshQ74Cdn37B1Gy7q",
    "tree": "9PTSJrVBUSJyroxXgnupiEjboK7XLbHgVRFnuM97ivEd",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "4hxACbE2jHf8uCaRAhnUxAEZ6NrwS9SBNJqGm8LbBiwE"
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.055,
    "basis_points": 550,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "4aoKy7jSApocxjVwXcTuCKhzZXEdwWDgHNScBVSoHDS7"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
