integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests_v2_leaf_schema__freeze_v2_using_permanent_delegate.snap
---
source: integration_tests/tests/integration_tests/cnft_tests_v2_leaf_schema.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "MplBubblegumV2",
  "id": "9j8QfKwJvzjiHwcRyi1TCK7sZgm8iEBpGn8sRyGF5Wy8",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "8LyrsjLvPwocRtEdJ6KKob4tcXao1E2GbriC1tFXAKuA",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "14HSi6HL7erQhj5Zs8RP7EaRxQPbdCz5k5PF2BCQ9PJ5",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "AMpz4GwkXtXHZgqt7gVq2jZLfwMonQyALPPJY5KY5A5Z",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 2,
    "asset_hash": "EWENqBWHtxKMnwrytT7R4EWRrh3ygyVtVrT3mJgL7PwD",
    "tree": "AxeSuuh97nUa14Rr8GiF2expDsR7Grsg3y7LmPGdg5o",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "4GkzAdHxkE5txX8rLBKJebKzswcyM6LKGMi5J1joqdmg"
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.055,
    "basis_points": 550,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": true,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "9dg9a79dKbzW6fTH4ET4qBybwH8oxWfkoZjrk2QmPwgy"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
