integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests_v2_leaf_schema__remove_from_collection_using_set_collection_v2.snap
---
source: integration_tests/tests/integration_tests/cnft_tests_v2_leaf_schema.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "MplBubblegumV2",
  "id": "HN6V2risGpYADNKyRoceBwgrUJDnSm6h21uSTLbLVaPY",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "BNcboiAyU5JabEtjpVQBudztnfdyNRAypCDJiKEQokEa",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "GmDqet7MNo1a2jTY5evpBbnPf9Hcw8djNA5pXAZYWXwJ",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "3mG2ogUZaUxX7TKRbDNDUPnesYghsd87YFAduqs4TETk",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 0,
    "asset_hash": "6xRSzqNfYMqQft3HRbUQURe2Qe9cEvGuvJ7jsEtpaANH",
    "tree": "5NNRPUW9YfQATHyDk7qSpUF97BH8um8dxsr9vhzV3Lzq",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.055,
    "basis_points": 550,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "8SAyVnHFKWtwNWSzbcFbmFmgz4iVkXR9WgUhUVz7GqUq"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
